feat (Bookmark): Bookmark article Api endpoint (#26)
create addBookmark controller
create getAllBookmarkedArticle controller
write test for all bookmark endpoints
modified swagger.yaml with article bookmark documentation
create addbookmark and getAllBookmarkedArticle routes
updated User and Article model with Bookmark  association

[delivers #160452493]
